--- a/WebContent/maxing/assets/css/main.css
+++ b/WebContent/maxing/assets/css/main.css
@@ -351,6 +351,22 @@ input, select, textarea {
 			margin-left: 100%;
 		}
 
+        .row > .col-13 {
+			width: 110%;
+		}
+
+		.row > .off-13 {
+			margin-left: 110%;
+		}
+
+        .row > .col-14 {
+			width: 125%;
+		}
+
+		.row > .off-14 {
+			margin-left: 125%;
+		}
+
 		.row.gtr-0 {
 			margin-top: 0px;
 			margin-left: 0px;
@@ -592,6 +608,22 @@ input, select, textarea {
 
 				.row > .off-12-xlarge {
 					margin-left: 100%;
+				}
+
+				.row > .col-13-xlarge {
+					width: 110%;
+				}
+
+				.row > .off-13-xlarge {
+					margin-left: 110%;
+				}
+
+				.row > .col-14-xlarge {
+					width: 125%;
+				}
+
+				.row > .off-14-xlarge {
+					margin-left: 125%;
 				}
 
 				.row.gtr-0 {
@@ -839,6 +871,22 @@ input, select, textarea {
 					margin-left: 100%;
 				}
 
+				.row > .col-13-large {
+					width: 110%;
+				}
+
+				.row > .off-13-large {
+					margin-left: 110%;
+				}
+
+				.row > .col-14-large {
+					width: 125%;
+				}
+
+				.row > .off-14-large {
+					margin-left: 125%;
+				}
+
 				.row.gtr-0 {
 					margin-top: 0px;
 					margin-left: 0px;
@@ -1082,6 +1130,22 @@ input, select, textarea {
 
 				.row > .off-12-medium {
 					margin-left: 100%;
+				}
+
+				.row > .col-13-medium {
+					width: 110%;
+				}
+
+				.row > .off-13-medium {
+					margin-left: 110%;
+				}
+
+				.row > .col-14-medium {
+					width: 125%;
+				}
+
+				.row > .off-14-medium {
+					margin-left: 125%;
 				}
 
 				.row.gtr-0 {
@@ -1329,6 +1393,22 @@ input, select, textarea {
 					margin-left: 100%;
 				}
 
+				.row > .col-13-small {
+					width: 110%;
+				}
+
+				.row > .off-13-small {
+					margin-left: 110%;
+				}
+
+				.row > .col-14-small {
+					width: 125%;
+				}
+
+				.row > .off-14-small {
+					margin-left: 125%;
+				}
+
 				.row.gtr-0 {
 					margin-top: 0px;
 					margin-left: 0px;
@@ -1490,7 +1570,7 @@ input, select, textarea {
 		background-image: linear-gradient(top, #008dad, #007b9d);*/
         background-image: url(images/dark.png);
 		display: inline-block;
-		padding: 15px 25px 15px 25px;
+		padding: 9px 5px 9px 5px;
 		background-color: #007b9d;
 		border-radius: 10px;
 		/*text-transform: lowercase;*/
@@ -1510,7 +1590,41 @@ input, select, textarea {
 			background-color: #118eb1;
 			box-shadow: inset 0px 0px 0px 1px #3ecceb;
 		}
+/* 통합검색 */
 
+    .button-daum{
+        background-image: url(images/daum.png);
+        display: inline-block;
+        padding 3px 3px 3px 3px;
+        background-color: #007b9d;
+        border-radius: 10px;
+		font-size: 1.2em;
+		letter-spacing: -1px;
+        border: solid 1px #006e8b;
+        box-shadow: inset 0px 0px 0px 1px #18a8c8;
+    }
+    .button-naver{
+        background-image: url(images/naver.png);
+        display: inline-block;
+        padding 3px 3px 3px 3px;
+        background-color: #007b9d;
+        border-radius: 10px;
+		font-size: 1.2em;
+		letter-spacing: -1px;
+        border: solid 1px #006e8b;
+        box-shadow: inset 0px 0px 0px 1px #18a8c8;
+    }
+    .button-google{
+        background-image: url(images/google.png);
+        display: inline-block;
+        padding 3px 3px 3px 3px;
+        background-color: #007b9d;
+        border-radius: 10px;
+		font-size: 1.2em;
+		letter-spacing: -1px;
+        border: solid 1px #006e8b;
+        box-shadow: inset 0px 0px 0px 1px #18a8c8;
+    }
 /* Header */
 
 	#header-wrapper {/*
@@ -1576,19 +1690,19 @@ input, select, textarea {
 			}
 
 				#header nav a.current-page-item {
-					background-image: -moz-linear-gradient(top, #007b99, #007897);
-					background-image: -webkit-linear-gradient(top, #007b99, #007897);
-					background-image: -ms-linear-gradient(top, #007b99, #007897);
-					background-image: linear-gradient(top, #007b99, #007897);
+					background-image: -moz-linear-gradient(top, #afafff, #f782a0);
+					background-image: -webkit-linear-gradient(top, #afafff, #f782a0);
+					background-image: -ms-linear-gradient(top, #afafff, #f782a0);
+					background-image: linear-gradient(top,#afafff, #f782a0);
 					background-color: #007897;
 					box-shadow: inset 0px 1px 5px 1px rgba(0, 0, 0, 0.1), 0px 0px 5px 1px rgba(255, 255, 255, 0.1);
 				}
 
 				#header nav a:hover {
-					background-image: -moz-linear-gradient(top, #f782a0, #077d9b);
-					background-image: -webkit-linear-gradient(top, #f782a0, #077d9b);
-					background-image: -ms-linear-gradient(top, #f782a0, #077d9b);
-					background-image: linear-gradient(top, #0782a0, #077d9b);
+					background-image: -moz-linear-gradient(top, #f782a0, #bfafbf);
+					background-image: -webkit-linear-gradient(top, #f782a0, #bfafbf);
+					background-image: -ms-linear-gradient(top, #f782a0, #bfafbf);
+					background-image: linear-gradient(top, #0782a0, #bfafbf);
 					background-color: #0882a1;
 					box-shadow: inset 0px 1px 5px 1px rgba(0, 0, 0, 0.05), 0px 0px 5px 1px rgba(255, 255, 255, 0.05);
 				}
