--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="WDSN">
+        
+    <wb-module deploy-name="wdsn">
+                
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/WebContent/maxing/src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/WebContent/WEB-INF/classes"/>
-        <property name="java-output-path" value="/WDSN/build/classes"/>
-        <property name="context-root" value="WDSN"/>
+                
+        <property name="context-root" value="wdsn"/>
+                
+        <property name="java-output-path" value="/wdsn/build/classes"/>
+            
     </wb-module>
+    
 </project-modules>
